change playercolor to blue

--- a/config.json
+++ b/config.json
@@ -19,20 +19,20 @@
   "Note": "",
   "ObjectStates_order": [
     "HandRed.5c4bb8",
-    "HandWhite.3f6d35",
+    "HandBlue.3f6d35",
     "TableSurface.8be14f",
     "PlayArea.5ef1de",
     "AttackDeckSource.893ba7",
     "MovementDeckSource.f8b297",
     "RelicSource.1e886d",
     "PlayerRedSource.81eaa5",
-    "PlayerWhiteSource.fc5ff4",
-    "HealthTrackerWhite.29b826",
+    "PlayerBlueSource.fc5ff4",
+    "HealthTrackerBlue.29b826",
     "HealthTrackerRed.5a08bb",
     "RoundTracker.bbd4df",
     "TurnTracker.6707f1",
     "GamePanel.2f5ddb",
-    "ScoreTrackerWhite.aba675",
+    "ScoreTrackerBlue.aba675",
     "ScoreTrackerRed.bf8e2e"
   ],
   "PlayArea": 0.5,
