--- a/config.json
+++ b/config.json
@@ -38,6 +38,7 @@
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist",
   "Sky": "Sky_Museum",
+  "SnapPoints_path": "SnapPoints.json",
   "TabStates_path": "TabStates.json",
   "Table": "Table_None",
   "Tags": [],
