--- a/config.json
+++ b/config.json
@@ -33,7 +33,9 @@
     "TurnTracker.6707f1",
     "GamePanel.2f5ddb",
     "ScoreTrackerBlue.aba675",
-    "ScoreTrackerRed.bf8e2e"
+    "ScoreTrackerRed.bf8e2e",
+    "PlayermatRed.9c3ece",
+    "PlayermatBlue.1f4fe0"
   ],
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist",
