--- a/objects/AttackDeckSource.893ba7/AttackDeck.93f459/TrapLaunch.630932.json
+++ b/objects/AttackDeckSource.893ba7/AttackDeck.93f459/TrapLaunch.630932.json
@@ -24,7 +24,7 @@
   },
   "Description": "",
   "DragSelectable": true,
-  "GMNotes": "",
+  "GMNotes": "37",
   "GUID": "630932",
   "Grid": true,
   "GridProjection": false,
