--- a/config.json
+++ b/config.json
@@ -35,7 +35,9 @@
     "ScoreTrackerBlue.aba675",
     "ScoreTrackerRed.bf8e2e",
     "PlayermatRed.9c3ece",
-    "PlayermatBlue.1f4fe0"
+    "PlayermatBlue.1f4fe0",
+    "DeckmatBlue.ea89a6",
+    "DeckmatRed.42d92c"
   ],
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist",
