added highlight board

--- a/config.json
+++ b/config.json
@@ -22,6 +22,7 @@
     "HandBlue.3f6d35",
     "TableSurface.8be14f",
     "PlayArea.5ef1de",
+    "HighlightBoard.5ef1df",
     "AttackDeckSource.893ba7",
     "MovementDeckSource.f8b297",
     "RelicSource.1e886d",
