--- a/config.json
+++ b/config.json
@@ -20,7 +20,6 @@
   "ObjectStates_order": [
     "HandRed.5c4bb8",
     "HandBlue.3f6d35",
-    "TableSurface.8be14f",
     "PlayArea.5ef1de",
     "HighlightBoard.5ef1df",
     "AttackDeckSource.893ba7",
@@ -40,11 +39,22 @@
     "DeckmatBlue.ea89a6",
     "DeckmatRed.42d92c",
     "HiddenZoneBlue.9ed505",
-    "HiddenZoneRed.06ee50"
+    "HiddenZoneRed.06ee50",
+    "Custom_Assetbundle.afc863",
+    "Custom_Assetbundle.c8edca",
+    "Custom_Assetbundle.393bf7",
+    "Custom_Assetbundle.12c65e",
+    "FlexTableControl.bd69bd",
+    "Custom_Assetbundle.f938a2",
+    "Custom_Assetbundle.9f95fd",
+    "Custom_Assetbundle.35b95f",
+    "Custom_Assetbundle.5af8f2",
+    "Custom_Model.4ee1f2"
   ],
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist",
   "Sky": "Sky_Museum",
+  "SkyURL": "http://u.cubeupload.com/noodlesinsoup/TopangaForestB8k49.jpg",
   "TabStates_path": "TabStates.json",
   "Table": "Table_None",
   "Tags": [],
