--- a/config.json
+++ b/config.json
@@ -49,7 +49,8 @@
     "Custom_Assetbundle.9f95fd",
     "Custom_Assetbundle.35b95f",
     "Custom_Assetbundle.5af8f2",
-    "Custom_Model.4ee1f2"
+    "Custom_Model.4ee1f2",
+    "NoteregardingHiddenZones.b6c018"
   ],
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist",
