added playarea copies

--- a/config.json
+++ b/config.json
@@ -50,7 +50,9 @@
     "Custom_Assetbundle.35b95f",
     "Custom_Assetbundle.5af8f2",
     "Custom_Model.4ee1f2",
-    "NoteregardingHiddenZones.b6c018"
+    "NoteregardingHiddenZones.b6c018",
+    "PlayAreaBlue.76b598",
+    "PlayAreaRed.7e4f92"
   ],
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist",
