added separate highlight boards

--- a/config.json
+++ b/config.json
@@ -21,7 +21,8 @@
     "HandRed.5c4bb8",
     "HandBlue.3f6d35",
     "PlayArea.5ef1de",
-    "HighlightBoard.5ef1df",
+    "HighlightBoardBlue.5ef1df",
+    "HighlightBoardRed.7ef1df",
     "AttackDeckSource.893ba7",
     "MovementDeckSource.f8b297",
     "RelicSource.1e886d",
