--- a/config.json
+++ b/config.json
@@ -53,7 +53,8 @@
     "Custom_Model.4ee1f2",
     "NoteregardingHiddenZones.b6c018",
     "PlayAreaBlue.76b598",
-    "PlayAreaRed.7e4f92"
+    "PlayAreaRed.7e4f92",
+    "ExplosionSource.b2b73f"
   ],
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist",
