--- a/config.json
+++ b/config.json
@@ -47,6 +47,7 @@
     "AttackDeckSource.893ba7",
     "MovementDeckSource.f8b297",
     "RelicSource.1e886d",
+    "ExplosionSource.b2b73f",
     "PlayerRedSource.81eaa5",
     "PlayerBlueSource.fc5ff4",
     "HealthTrackerBlue.29b826",
@@ -58,29 +59,28 @@
     "ScoreTrackerRed.bf8e2e",
     "PlayermatRed.9c3ece",
     "PlayermatBlue.1f4fe0",
+    "PlayAreaBlue.76b598",
+    "PlayAreaRed.7e4f92",
     "DeckmatBlue.ea89a6",
     "DeckmatRed.42d92c",
     "HiddenZoneBlue.9ed505",
     "HiddenZoneRed.06ee50",
+    "FlexTableControl.bd69bd",
     "Custom_Assetbundle.afc863",
     "Custom_Assetbundle.c8edca",
     "Custom_Assetbundle.393bf7",
     "Custom_Assetbundle.12c65e",
-    "FlexTableControl.bd69bd",
     "Custom_Assetbundle.f938a2",
     "Custom_Assetbundle.9f95fd",
     "Custom_Assetbundle.35b95f",
     "Custom_Assetbundle.5af8f2",
     "Custom_Model.4ee1f2",
-    "NoteregardingHiddenZones.b6c018",
-    "PlayAreaBlue.76b598",
-    "PlayAreaRed.7e4f92",
-    "ExplosionSource.b2b73f"
+    "NoteregardingHiddenZones.b6c018"
   ],
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist",
   "Sky": "Sky_Museum",
-  "SkyURL": "http://u.cubeupload.com/noodlesinsoup/TopangaForestB8k49.jpg",
+  "SkyURL": "https://github.com/Chr1Z93/Heroic-Heist-TTS/blob/main/assets/TropicalForest.png?raw=true",
   "TabStates_path": "TabStates.json",
   "Table": "Table_None",
   "Tags": [],
