--- a/config.json
+++ b/config.json
@@ -80,7 +80,7 @@
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist",
   "Sky": "Sky_Museum",
-  "SkyURL": "https://github.com/Chr1Z93/Heroic-Heist-TTS/blob/main/assets/TropicalForest.png?raw=true",
+  "SkyURL": "https://github.com/Chr1Z93/Heroic-Heist-TTS/blob/main/assets/TropicalForest.jpg?raw=true",
   "TabStates_path": "TabStates.json",
   "Table": "Table_None",
   "Tags": [],
