added crosses as attack indicator

--- a/config.json
+++ b/config.json
@@ -78,7 +78,9 @@
     "Custom_Assetbundle.5af8f2",
     "Custom_Model.4ee1f2",
     "NoteregardingHiddenZones.b6c018",
-    "Logo.f940da"
+    "Logo.f940da",
+    "CrossBlueSource.cf0efd",
+    "CrossRedSource.c2c3ac"
   ],
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist",
