--- a/config.json
+++ b/config.json
@@ -82,7 +82,7 @@
     "CrossRedSource.c2c3ac"
   ],
   "PlayArea": 0.5,
-  "SaveName": "Heroic Heist v1.0.2",
+  "SaveName": "Heroic Heist 1.0.2",
   "Sky": "Sky_Museum",
   "SkyURL": "https://github.com/Chr1Z93/Heroic-Heist-TTS/blob/main/assets/TropicalForest.jpg?raw=true",
   "TabStates_path": "TabStates.json",
