--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,22 +2,21 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Build with TTS Mod Manager",
+      "label": "Heroic Heist: Build",
       "type": "shell",
       "command": "go",
       "args": [
         "run",
         "main.go",
-        "--moddir=C:\\git\\Heroic-Heist-TTS",
-        "--modfile=${env:USERPROFILE}\\Documents\\My Games\\Tabletop Simulator\\Saves\\composed.json"
+        "--moddir=${workspaceFolder}",
+        "--modfile=${env:USERPROFILE}\\Documents\\My Games\\Tabletop Simulator\\Saves\\HeroicHeist.json"
       ],
       "options": {
         "cwd": "C:\\git\\TTSModManager"
       },
       "problemMatcher": [],
       "group": {
-        "kind": "build",
-        "isDefault": true
+        "kind": "build"
       }
     }
   ]
