--- a/config.json
+++ b/config.json
@@ -20,9 +20,7 @@
       "Zoomed": false
     }
   ],
-  "ComponentTags": {
-    "labels": []
-  },
+  "ComponentTags_path": "ComponentTags.json",
   "DecalPallet": [],
   "GameComplexity": "",
   "GameMode": "Heroic Heist",
@@ -56,12 +54,8 @@
     "GamePanel.2f5ddb",
     "ScoreTrackerBlue.aba675",
     "ScoreTrackerRed.bf8e2e",
-    "PlayermatRed.9c3ece",
-    "PlayermatBlue.1f4fe0",
     "PlayAreaBlue.76b598",
     "PlayAreaRed.7e4f92",
-    "DeckmatBlue.ea89a6",
-    "DeckmatRed.42d92c",
     "HiddenZoneBlue.9ed505",
     "HiddenZoneRed.06ee50",
     "BasicTurnOrder.ced220",
@@ -79,7 +73,12 @@
     "NoteregardingHiddenZones.b6c018",
     "Logo.f940da",
     "CrossBlueSource.cf0efd",
-    "CrossRedSource.c2c3ac"
+    "CrossRedSource.c2c3ac",
+    "PlayermatRed.679017",
+    "PlayermatBlue.4ed1c1",
+    "Logo.adcd0f",
+    "Logo.50d7b8",
+    "Logo.efb262"
   ],
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist 1.3.0",
