--- a/config.json
+++ b/config.json
@@ -72,13 +72,11 @@
     "Custom_Model.4ee1f2",
     "NoteregardingHiddenZones.b6c018",
     "Logo.f940da",
+    "Logo.adcd0f",
     "CrossBlueSource.cf0efd",
     "CrossRedSource.c2c3ac",
     "PlayermatRed.679017",
-    "PlayermatBlue.4ed1c1",
-    "Logo.adcd0f",
-    "Logo.50d7b8",
-    "Logo.efb262"
+    "PlayermatBlue.4ed1c1"
   ],
   "PlayArea": 0.5,
   "SaveName": "Heroic Heist 2.0.0",
