move hands, turn order help and claim button

--- a/config.json
+++ b/config.json
@@ -79,7 +79,7 @@
     "PlayermatBlue.4ed1c1"
   ],
   "PlayArea": 0.5,
-  "SaveName": "Heroic Heist 2.1.1",
+  "SaveName": "Heroic Heist",
   "Sky": "Sky_Museum",
   "SkyURL": "https://github.com/Chr1Z93/Heroic-Heist-TTS/blob/main/assets/TropicalForest.jpg?raw=true",
   "TabStates_path": "TabStates.json",
